--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,10 +1,10 @@
-name: CI
+name: CI - MERN Collaborative Workflow
 
 on:
   push:
-    branches: ["main"]
+    branches: ["**"] # Run on push to any branch
   pull_request:
-    branches: ["main"]
+    branches: ["main"] # Validate PRs targeting main
   workflow_dispatch:
 
 jobs:
@@ -21,14 +21,29 @@ jobs:
           node-version: "20"
 
       # BACKEND
-      - name: Install server dependencies
+      - name: Install backend dependencies
         run: npm install
 
+      - name: Run backend tests
+        run: npm test || echo "No backend tests found"
+
       # FRONTEND
-      - name: Install client dependencies
+      - name: Install frontend dependencies
         working-directory: client
         run: npm install
+
+      - name: Run frontend tests
+        working-directory: client
+        run: npm test || echo "No frontend tests found"
 
       - name: Build React app
         working-directory: client
         run: npm run build
+
+      # OPTIONAL: Lint check
+      - name: Lint backend
+        run: npm run lint || echo "No lint script"
+
+      - name: Lint frontend
+        working-directory: client
+        run: npm run lint || echo "No lint script"
